# PhotosDD

./: .gitignore  CMakeLists.txt  ChangeLog  NEWS  README  TODO  photosdd.spec
data/: photosdd.desktop  photosdd.xpm
photosdd/: .gitignore  CMakeLists.txt  photosdd.qrc
photosdd-gui/: mainwindow.cpp  mainwindow.h
photosdd/include/photosdd/: photosdd.h  photosddplugin.h  pluginloader.h  pluginsdialog.h
photosdd/src/: downloader.cpp  fileutils.cpp  photosdd.cpp  pluginloader.cpp  pluginsdialog.cpp
photosdd_gui/: CMakeLists.txt  main.cpp  tipdialog.cpp  tipdialog.h
plugins/atom/: CMakeLists.txt  atom.cpp  atom.h  atom.qrc
plugins/atom/locale/: atom_de.ts  atom_en.ts
plugins/file/: .gitignore  CMakeLists.txt  file.cpp  file.h  file.qrc
plugins/file/locale/: file_de.ts  file_en.ts
plugins/flickr/: .gitignore  CMakeLists.txt  flickr.cpp  flickr.h  flickr.ui
plugins/fotocommunity/: .gitignore  CMakeLists.txt  fotocommunity.cpp  fotocommunity.h
plugins/html/: CMakeLists.txt  html.cpp  html.h  html.qrc  html.ui
plugins/picasa/: CMakeLists.txt  picasa.cpp  picasa.h  picasa.qrc
plugins/rss/: CMakeLists.txt  rss.cpp  rss.h
plugins/rss/locale/: rss_de.ts  rss_en.ts
src/: CMakeLists.txt
src/photosdd/: CMakeLists.txt  downloader.cpp  downloader.h  fileutils.cpp  fileutils.h  photosdd.cpp  photosdd.h  photosdd_global.h  photosddplugin.h  pluginloader.cpp  pluginloader.h  pluginsdialog.cpp  pluginsdialog.h
src/photosdd-gui/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  photosdd-gui.rc  tipdialog.cpp  tipdialog.h
src/photosdd-gui/locale/: photosdd_de.ts  photosdd_en.ts
src/plugins/: CMakeLists.txt
src/plugins/atom/: CMakeLists.txt  atom.cpp  atom.h  atom.ui
src/plugins/file/: CMakeLists.txt  file.cpp  file.h  file.ui
src/plugins/flickr/: CMakeLists.txt  flickr.cpp  flickr.h  flickr.qrc
src/plugins/flickr/locale/: flickr_de.ts  flickr_en.ts
src/plugins/fotocommunity/: CMakeLists.txt  fotocommunity.cpp  fotocommunity.h  fotocommunity.qrc  fotocommunity.ui
src/plugins/fotocommunity/locale/: fotocommunity_de.ts  fotocommunity_en.ts
src/plugins/html/: CMakeLists.txt  html.cpp  html.h
src/plugins/html/locale/: html_de.ts  html_en.ts
src/plugins/picasa/: CMakeLists.txt  picasa.cpp  picasa.h  picasa.ui
src/plugins/picasa/locale/: picasa_de.ts  picasa_en.ts
src/plugins/rss/: CMakeLists.txt  rss.cpp  rss.h  rss.qrc  rss.ui
